// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Explorer renders 1`] = `
<Explorer
  depth={0}
  gotoPage={[Function]}
  isVisible={false}
  nodes={Object {}}
  onClose={[Function]}
  page={null}
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
      "unsubscribe": [Function],
    }
  }
/>
`;

exports[`Explorer renders 2`] = `<Connect(Explorer) />`;

exports[`Explorer visible 1`] = `
<Explorer
  depth={0}
  gotoPage={[Function]}
  isVisible={true}
  nodes={
    Object {
      "1": Object {
        "children": Object {
          "count": 0,
          "items": Array [],
        },
        "data": null,
        "isError": false,
        "isFetching": true,
        "parent": null,
      },
    }
  }
  onClose={[Function]}
  page={1}
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
      "unsubscribe": [Function],
    }
  }
/>
`;

exports[`Explorer visible 2`] = `
<ExplorerPanel
  depth={0}
  gotoPage={[Function]}
  nodes={
    Object {
      "1": Object {
        "children": Object {
          "count": 0,
          "items": Array [],
        },
        "data": null,
        "isError": false,
        "isFetching": true,
        "parent": null,
      },
    }
  }
  onClose={[Function]}
  page={
    Object {
      "children": Object {
        "count": 0,
        "items": Array [],
      },
      "data": null,
      "isError": false,
      "isFetching": true,
      "parent": null,
    }
  }
/>
`;
